--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -31,23 +31,24 @@
     <a  href="http://127.0.0.1:8000/three/">three</a>
 </div>
 <!--the content-->
-<div id="content">
-  <div id="content_" style="display: grid;">
+
+<div id="content" class="middle">
+  <div id="content_"  style="display: grid;">
     <div id="name">
       <p class="big">Hi, I'm Eason.</p>
       <p class="small">A student from Wyalusing PA.</p>
     </div>
 
     <div id="about_me">
-      <div id="left">
-        <p class="middle">about me</p>
-        <p class="small"> At first, I live in Taiwan, </br> than I move to America </br>in order to get better education</p>
-      </div>  
+      <p class="middle">about me</p>
+      <p class="small"> At first, I live in Taiwan, </br> than I move to America </br>in order to get better education</p>
     </div>
-
   </div>
 </div>
 
+<div class="middle" style="display:flex; width: 100%; margin-top: -350px;">
+<img  src="..\..\..\static\image\agent-peely-img.png" >
+</div>
 
   <!--</div>-->
 
