--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -40,14 +40,17 @@
     </div>
 
     <div id="about_me">
-      <p class="middle">about me</p>
-      <p class="small"> At first, I live in Taiwan, </br> than I move to America </br>in order to get better education</p>
+      <div id="thing">
+        <p class="middle">ABOUT ME</p>
+        <p class="small"> At first, I live in Taiwan, than I move to America in order to get better education</p>
+      </div>  
     </div>
   </div>
 </div>
 
-<div class="middle" style="display:flex; width: 100%; margin-top: -350px;">
-<img  src="..\..\..\static\image\agent-peely-img.png" >
+<div id="img" class="middle" style="display:flex; width: 100%; margin-top: -350px;">
+  <div style="opacity: 1;background-image: radial-gradient(#ffffff 0.65px, #212121 0.65px);background-size: 13px 13px;width: 100px;height: 100px;display:block; position:relative; "></div>
+  <img  src="..\..\..\static\image\agent-peely-img.png" >
 </div>
 
   <!--</div>-->
