--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -40,15 +40,23 @@
     </div>
 
     <div id="about_me">
-      <div id="thing">
+      <div>
         <p class="middle">ABOUT ME</p>
         <p class="small"> At first, I live in Taiwan, than I move to America in order to get better education</p>
-      </div>  
+      </div>   
+      <div id="MY PROJECT">
+        <p class="middle">MY PROJECT</p>
+        <p class="small">Here is some project or activity I do in 2023 to 2024.</p>
+      </div>
     </div>
+
+    
+  
+
   </div>
 </div>
 
-<div id="img" class="middle" style="display:flex; width: 100%; margin-top: -350px;">
+<div id="img" class="middle" style="display:flex; width: 100%; margin-top: -350px;margin-left: -20px;">
   <div style="opacity: 1;background-image: radial-gradient(#ffffff 0.65px, #212121 0.65px);background-size: 13px 13px;width: 100px;height: 100px;display:block; position:relative; "></div>
   <img  src="..\..\..\static\image\agent-peely-img.png" >
 </div>
