--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -170,6 +170,7 @@ body, html {
 
 #content{
   width: 100%;
+  height: 300px;
   display: flex;
   margin-top: 100px;
   position: relative;
@@ -214,6 +215,7 @@ body, html {
   font-size: 70px;
   font-weight: 700;
   color: aliceblue;
+  margin-bottom: 0%;
 }
 
 .small{
@@ -248,14 +250,14 @@ body, html {
   width: 80%;
   /*margin-right: 20px; */
   animation: move_right 1s;
-  display: flex;align-items: flex-end;
+  display: flex;align-items: flex-end;flex-direction: column;
   justify-self: end;
 }
 
 
 
 .middle{
-  justify-content: center
+  justify-content: center;
 }
 
 /*content two*/
