--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -30,36 +30,28 @@
     <a  href="http://127.0.0.1:8000/two/" >two</a>
     <a  href="http://127.0.0.1:8000/three/">three</a>
 </div>
+<hr id="line">
 <!--the content-->
 
 <div id="content" class="middle">
-  <div id="content_"  style="display: grid;">
+  <div id="content_" style="display: grid;">
     <div id="name">
+      <hr style="height: 5px;width: 50px;margin: 0%;background-color: aliceblue;">
       <p class="big">Hi, I'm Eason.</p>
-      <p class="small">A student from Wyalusing PA.</p>
+      <p style="font-size: 25px;font-weight: 600;">A student from Wyalusing PA.</p>
+      <p class="small" style="max-width: 350px;">At first, I live in Taiwan, than I move to America in order to get better education</p>
     </div>
 
-    <div id="about_me">
+    <div id="img" style="display:flex;width: 100%;height: 200px;">
       <div>
-        <p class="middle">ABOUT ME</p>
-        <p class="small"> At first, I live in Taiwan, than I move to America in order to get better education</p>
-      </div>   
-      <div id="MY PROJECT">
-        <p class="middle">MY PROJECT</p>
-        <p class="small">Here is some project or activity I do in 2023 to 2024.</p>
-      </div>
+        <img  src="..\..\..\static\image\agent-peely-img.png" style="display:flex;width: 100%;height: 400px;">
+      </div>  
     </div>
-
-    
-  
 
   </div>
 </div>
 
-<div id="img" class="middle" style="display:flex; width: 100%; margin-top: -350px;margin-left: -20px;">
-  <div style="opacity: 1;background-image: radial-gradient(#ffffff 0.65px, #212121 0.65px);background-size: 13px 13px;width: 100px;height: 100px;display:block; position:relative; "></div>
-  <img  src="..\..\..\static\image\agent-peely-img.png" >
-</div>
+<img src="..\..\..\static\image\book-stack-512.png" style="display:flex;bottom: -40;right:0;position: fixed;transform: rotate(20deg);opacity: 0.25;z-index: 1;">
 
   <!--</div>-->
 
