--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -29,9 +29,19 @@
 </div>
 
 
-<div id="content" style="display: block;">
-  <div id="filler"></div>
-  <h1>wwwww</h1>
+<div id="content" style="display: flex;flex-direction: column;align-items: center">
+  <div>
+    <p class="big">Project/Activity</p>
+  </div>
+  <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;grid-row-gap: 80px;justify-content: center; ">
+    <div>
+      <p class="small">111</p>
+    </div>
+
+    <div>
+      <p class="small">222</p>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
