--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -23,23 +23,29 @@
 
 <!--navbar on computer-->
 <div class="topnav transition">
-    <a class="is_active" href="http://127.0.0.1:8000/one">one</a>
+    <a class="is_active" href="http://127.0.0.1:8000/one">Project</a>
     <a href="http://127.0.0.1:8000/two/" >two</a>
     <a href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
 
-<div id="content" style="display: flex;flex-direction: column;align-items: center">
+<div id="content" style="display: flex;flex-direction: column;align-items: center;margin: 0;">
   <div>
     <p class="big">Project/Activity</p>
   </div>
   <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;grid-row-gap: 80px;justify-content: center; ">
     <div>
-      <p class="small">111</p>
+      <div class="thing" style=" margin-top: 30px;">
+        <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
+        <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+      </div>
     </div>
-
+<!--left section-->
     <div>
-      <p class="small">222</p>
+      <div class="thing">
+        <p class="middle" style="display:flex;justify-content: center;">thing</p>
+        <p class="small" style=" display:flex;justify-content: center;">something</p>
+      </div>
     </div>
   </div>
 </div>
