--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -26,7 +26,7 @@
 
 <!--navbar on computer-->
 <div class="topnav">
-    <a  href="http://127.0.0.1:8000/one/">one</a>
+    <a  href="http://127.0.0.1:8000/one/">Project</a>
     <a  href="http://127.0.0.1:8000/two/" >two</a>
     <a  href="http://127.0.0.1:8000/three/">three</a>
 </div>
