--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -33,9 +33,14 @@
   <div>
     <p class="big">Project/Activity</p>
   </div>
-  <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;grid-row-gap: 80px;justify-content: center; ">
+  <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center; ">
     <div>
       <div class="thing" style=" margin-top: 30px;">
+        <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
+        <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+      </div>
+
+      <div class="thing">
         <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
       </div>
@@ -43,8 +48,13 @@
 <!--left section-->
     <div>
       <div class="thing">
-        <p class="middle" style="display:flex;justify-content: center;">thing</p>
-        <p class="small" style=" display:flex;justify-content: center;">something</p>
+        <p class="middle" style="display:flex;justify-content: center;">Join science olympiad</p>
+        <p class="small" style=" display:flex;justify-content: center;"> </p>
+      </div>
+
+      <div class="thing" >
+        <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
+        <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
       </div>
     </div>
   </div>
