--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -49,7 +49,7 @@
     <div>
       <div class="thing">
         <p class="middle" style="display:flex;justify-content: center;">Join science olympiad</p>
-        <p class="small" style=" display:flex;justify-content: center;"> </p>
+        <p class="small" style=" display:flex;justify-content: center;">I join school science olympiad team.</p>
       </div>
 
       <div class="thing" >
