--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -35,14 +35,15 @@
   </div>
   <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center; ">
     <div>
-      <div class="thing" style=" margin-top: 30px;">
+      <div class="thing" style=" margin-top: 30px;" >
         <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+        <p class="small hide" style=" display:flex;justify-content: center;"> 111111 </p>
       </div>
 
       <div class="thing">
-        <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
-        <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+        <p class="middle" style="display:flex;justify-content: center;">Help school Tech Appartment</p>
+        <p class="small" style=" display:flex;justify-content: center;">I help them fix computer</p>
       </div>
     </div>
 <!--left section-->
@@ -53,7 +54,7 @@
       </div>
 
       <div class="thing" >
-        <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
+        <p class="middle" style="display:flex;justify-content: center;">Join school Track team</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
       </div>
     </div>
