--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -33,12 +33,11 @@
   <div>
     <p class="big">Project/Activity</p>
   </div>
-  <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center; ">
+  <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center;">
     <div>
-      <div class="thing" style=" margin-top: 30px;" >
+      <div class="thing not_turn" role="button" style=" margin-top: 30px;" onclick="open_card()" >
         <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
-        <p class="small hide" style=" display:flex;justify-content: center;"> 111111 </p>
       </div>
 
       <div class="thing">
