--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -36,23 +36,25 @@
   <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center;">
     <div>
       <div class="thing not_turn" role="button" style=" margin-top: 30px;" onclick="open_card()" >
+        <div class="front">
         <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+        </div>
       </div>
 
-      <div class="thing">
+      <div class="thing not_turn">
         <p class="middle" style="display:flex;justify-content: center;">Help school Tech Appartment</p>
         <p class="small" style=" display:flex;justify-content: center;">I help them fix computer</p>
       </div>
     </div>
 <!--left section-->
     <div>
-      <div class="thing">
+      <div class="thing not_turn">
         <p class="middle" style="display:flex;justify-content: center;">Join science olympiad</p>
         <p class="small" style=" display:flex;justify-content: center;">I join school science olympiad team.</p>
       </div>
 
-      <div class="thing" >
+      <div class="thing not_turn" >
         <p class="middle" style="display:flex;justify-content: center;">Join school Track team</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
       </div>
