--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -268,6 +268,10 @@ body, html {
   animation: change 1s;
 }
 
+.not_turn{
+  transform: translateX(-100%);
+}
+
 @media (max-width:500px) { /*what should the web do when the web width is not enough*/
   .topnav {/*web setting on pc (hide)*/
 
