--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -35,7 +35,7 @@
   </div>
   <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center;">
     <div>
-      <div class="thing not_turn" role="button" style=" margin-top: 30px;" onclick="open_card()" >
+      <div class="thing not_turn" id="one" role="button" style=" margin-top: 30px;" onclick="open_card(1)" >
         
         <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
