--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -35,7 +35,7 @@
   </div>
   <div style="display: grid;height: 100%;width: 90%;grid-column-gap: 20px;grid-template-columns: 1fr 1fr;  grid-column-gap: 28px;justify-content: center;">
     <div>
-      <div class="thing not_turn" id="one" role="button" style=" margin-top: 30px;" onclick="open_card(1)" >
+      <div class="thing" id="one" role="button" style=" margin-top: 30px;" onclick="open_card(1)" >
         <div class="first_page">
           <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
           <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
@@ -45,19 +45,19 @@
         </div> 
       </div>
 
-      <div class="thing not_turn" id="two" role="">
+      <div class="thing" id="two" role="button" onclick="open_card(2)">
         <p class="middle" style="display:flex;justify-content: center;">Help school Tech Appartment</p>
         <p class="small" style=" display:flex;justify-content: center;">I help them fix computer</p>
       </div>
     </div>
 <!--left section-->
     <div>
-      <div class="thing not_turn">
+      <div class="thing" id="three" role="button" onclick="open_card(3)">
         <p class="middle" style="display:flex;justify-content: center;">Join science olympiad</p>
         <p class="small" style=" display:flex;justify-content: center;">I join school science olympiad team.</p>
       </div>
 
-      <div class="thing not_turn" >
+      <div class="thing" id="four" role="button" onclick="open_card(4)">
         <p class="middle" style="display:flex;justify-content: center;">Join school Track team</p>
         <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
       </div>
