--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -40,26 +40,42 @@
           <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
           <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
         </div> 
-        <div class="second_page">
+        <div class="second_page" style="display: none;">
           <p>111</p>
         </div> 
       </div>
 
       <div class="thing" id="two" role="button" onclick="open_card(2)">
-        <p class="middle" style="display:flex;justify-content: center;">Help school Tech Appartment</p>
-        <p class="small" style=" display:flex;justify-content: center;">I help them fix computer</p>
+        <div class="first_page">
+          <p class="middle" style="display:flex;justify-content: center;">Help school Tech Appartment</p>
+          <p class="small" style=" display:flex;justify-content: center;">I help them fix computer</p>
+        </div>
+        <div class="second_page" style="display: none;">
+          <p>222</p>
+        </div> 
       </div>
+
     </div>
 <!--left section-->
     <div>
       <div class="thing" id="three" role="button" onclick="open_card(3)">
-        <p class="middle" style="display:flex;justify-content: center;">Join science olympiad</p>
-        <p class="small" style=" display:flex;justify-content: center;">I join school science olympiad team.</p>
+        <div class="first_page">
+          <p class="middle" style="display:flex;justify-content: center;">Join science olympiad</p>
+          <p class="small" style=" display:flex;justify-content: center;">I join school science olympiad team.</p>
+        </div>
+        <div class="second_page" style="display: none;">
+          <p>333</p>
+        </div> 
       </div>
 
       <div class="thing" id="four" role="button" onclick="open_card(4)">
-        <p class="middle" style="display:flex;justify-content: center;">Join school Track team</p>
-        <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+        <div class="first_page">
+          <p class="middle" style="display:flex;justify-content: center;">Join school Track team</p>
+          <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+        </div>
+        <div class="second_page" style="display: none;">
+          <p>444</p>
+        </div> 
       </div>
     </div>
   </div>
