--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -51,7 +51,7 @@
           <p class="small" style=" display:flex;justify-content: center;">I help them fix computer</p>
         </div>
         <div class="second_page" style="display: none;">
-          <p>222</p>
+          <p class="small">222</p>
         </div> 
       </div>
 
