--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -38,10 +38,10 @@
       <div class="thing" id="one" role="button" style=" margin-top: 30px;" onclick="open_card(1)" >
         <div class="first_page">
           <p class="middle" style="display:flex;justify-content: center;">Python Tic Tac Toe</p>
-          <p class="small" style=" display:flex;justify-content: center;">A minigame I make on 2023 using python.</p>
+          <p class="small" style=" display:flex;justify-content: center;">A minigame I make at school using python.</p>
         </div> 
         <div class="second_page" style="display: none;">
-          <p>111</p>
+          <p class="small">This is a minigame I make while at school, while every one is following teacher using code language like scratch to make TIC TAC TOE, I think I maybe can try to make it by python, so I decide to make it on my own. THis experience give me a thought to make a website as my protfolio.</p>
         </div> 
       </div>
 
