--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -265,8 +265,7 @@ body, html {
 
 
 .card{
-    animation: change 1s  cubic-bezier(.7,0,.25,1) .25s, opacity .2s ease-out .75s;
-  
+  animation: change 1s;
 }
 .not_turn{
   animation: change2 1s;
