--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -44,7 +44,7 @@
 
     <div id="img" style="display:flex;width: 100%;height: 200px;">
       <div>
-        <img  src="..\..\..\static\image\agent-peely-img.png" style="display:flex;width: 100%;height: 400px;">
+        <img  src="..\..\..\static\image\Shao_Tang.JPG" style="display:flex;width: 100%;height: 400px;">
       </div>  
     </div>
 
