--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -29,10 +29,11 @@
     <a class="is_active" href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
-<div id="content" style="display: block;">
-  <div id="filler"></div>
-  <h1>wwwww</h1>
-  <h1>wddiajwd</h1>
+<div id="content" style="display: flex;flex-direction: column;align-items: center;margin: 0;">
+  <div>
+    <p class="big">About</p>
+  </div>
+  
 </div>
 
 {% endblock %}
