--- a/myself/templates/myself/two.html
+++ b/myself/templates/myself/two.html
@@ -28,8 +28,10 @@
 </div>
 
 
-<div id="content" style="display: block;">
-  <div id="filler"></div>
-  <h1>wweffwww</h1>
+<div id="content" style="display: flex;flex-direction: column;align-items: center;margin: 0;">
+  <div>
+    <p class="big">About</p>
+  </div>
+  
 </div>
 {% endblock %}
