--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -5,7 +5,7 @@ body, html {
   margin-top: auto;
   width: 100%;
   height: 100%;
-  background-color: #212121;
+  background-image: linear-gradient(#212121, #585858);
 }
 
 *{
